Creates 使用maven定义项目结构.md
Auto commit by GitBook Editor